HTML file input elements do not support file extensions in the "accept" attribute https://bugs.webkit.org/show_bug.cgi?id=95698 <rdar://problem/12231850>

Reviewed by Darin Adler.

Source/WebCore:

Serialize the accepted file extensions so they can be accessed in the UI process.

* platform/FileChooser.h:
* platform/FileChooser.cpp:
(WebCore::FileChooser::invalidate): Modernize.
(WebCore::FileChooserSettings::acceptTypes const): Deleted.
This is dead code, it was only used by Chromium.

Source/WebKit:

Plumb accepted file extensions out to the C API.
The Cocoa API will be improved in a later patch.

* Shared/WebCoreArgumentCoders.cpp:
(IPC::ArgumentCoder<FileChooserSettings>::encode):
(IPC::ArgumentCoder<FileChooserSettings>::decode):
* UIProcess/API/APIOpenPanelParameters.cpp:
(API::OpenPanelParameters::acceptFileExtensions const):
* UIProcess/API/APIOpenPanelParameters.h:
* UIProcess/API/C/WKOpenPanelParametersRef.cpp:
(WKOpenPanelParametersCopyAcceptedFileExtensions):
* UIProcess/API/C/WKOpenPanelParametersRef.h:

Canonical link: https://commits.webkit.org/191840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220135 268f45cc-cd09-0410-ab3c-d52691b4dbfc