Source/WebCore/platform/FileChooser.h
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006, 2007, 2008 Apple Inc. All rights reserved.
+ * Copyright (C) 2006-2017 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -41,7 +41,7 @@ enum MediaCaptureType {
     MediaCaptureTypeUser,
     MediaCaptureTypeEnvironment
 };
-    
+
 class FileChooser;
 class Icon;
 
@@ -64,9 +64,6 @@ struct FileChooserSettings {
 #if ENABLE(MEDIA_CAPTURE)
     MediaCaptureType mediaCaptureType;
 #endif
-
-    // Returns a combined vector of acceptMIMETypes and acceptFileExtensions.
-    Vector<String> acceptTypes() const;
 };
 
 class FileChooserClient {
@@ -89,7 +86,7 @@ public:
     // FIXME: This function is almost identical to FileChooser::chooseFiles(). We should merge this
     // function with FileChooser::chooseFiles() and hence remove the PLATFORM(IOS)-guard.
     WEBCORE_EXPORT void chooseMediaFiles(const Vector<String>& paths, const String& displayString, Icon*);
-#endif    
+#endif
 
     // FIXME: We should probably just pass file paths that could be virtual paths with proper display names rather than passing structs.
     void chooseFiles(const Vector<FileChooserFileInfo>& files);
@@ -99,7 +96,7 @@ public:
 private:
     FileChooser(FileChooserClient*, const FileChooserSettings&);
 
-    FileChooserClient* m_client;
+    FileChooserClient* m_client { nullptr };
     FileChooserSettings m_settings;
 };
 
